--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- savol -->
         <section class="container question">
             <div class="question-text"></div>
-            
+
             <div class="question_box">
                 <div class="options" id="options"></div>
                 <div class="image-container" id="image-container">
@@ -44,8 +44,10 @@
         </section>
 
         <!-- result -->
-        <section class="result">
-
+        <section class="result-box">
+            <div class="result">
+                
+            </div>
         </section>
 
         <!-- footer -->
