--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- result -->
         <section class="result-box">
             <div class="result">
-                
+               
             </div>
         </section>
 
@@ -59,6 +59,17 @@
         </section>
     </section>
 
+    <!-- warning modal -->
+    <div id="warning-modal" class="modal">
+        <div class="modal-content">
+            <h2>Ogohlantirish!</h2>
+            <p>Sizda belgilangan javob bermagan savollar mavjud. Yakunlashni davom ettirmoqchimisiz?</p>
+            <div class="modal-buttons">
+                <button id="cancel-finish">Yo'q</button>
+                <button id="confirm-finish">Ha</button>
+            </div>
+        </div>
+    </div>
 
     <script src="./public/script.js"></script>
 </body>
