--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="warning-modal" class="modal">
         <div class="modal-content">
             <h2>Ogohlantirish!</h2>
-            <p>Sizda belgilangan javob bermagan savollar mavjud. Yakunlashni davom ettirmoqchimisiz?</p>
+            <p>Sizda belgilanmagan savollar mavjud. Yakunlashni davom ettirmoqchimisiz?</p>
             <div class="modal-buttons">
                 <button id="cancel-finish">Yo'q</button>
                 <button id="confirm-finish">Ha</button>
