--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+
+    <link rel="stylesheet" href="./public/block.css">
     <link rel="stylesheet" href="./public/style.css">
     <title>Document</title>
 </head>
@@ -71,7 +73,9 @@
         </div>
     </div>
 
+     
     <script src="./public/script.js"></script>
+    <script src="./public/block.js"></script>
 </body>
 
 </html>
